# comet

./: .gitignore  AGENTS.md  THIRD_PARTY_NOTICES.md  index.html  kill-dev-ports.ps1  package-lock.json  package.json  tsconfig.base.json  tsconfig.electron.json  tsconfig.tests.json  vite.config.ts  vite.web.config.ts
.codex/: config.toml
.github/: CODEOWNERS  comet-instructions.md  dependabot.yml  ls-instructions.md  pull_request_template.md
comet-rs/: Cargo.toml
comet-rs/comet-api/: Cargo.toml
comet-rs/comet-api/src/: lib.rs  stub.rs
comet-rs/comet-api/src/openai/: adapter.rs  error.rs  mod.rs  request_builder.rs  response_stream.rs  sse.rs  tool_mapping.rs
comet-rs/comet-client/: Cargo.toml
comet-rs/comet-client/src/: lib.rs  policy.rs  sse.rs
comet-rs/comet-client/src/http/: async_client.rs  auth.rs  client.rs  error.rs  mod.rs
docs/: README.md  adding-model-profiles.md  app-server-api.md  approval-and-sandbox.md  architecture.md  checkpoint-and-rollback.md  comet-client.md  configuration-model.md  crate-layout.md  cursor-gap-analysis.md  dependency-policy.md  domain-model.md  editor-tab-mode-behavior.md  event-log-and-replay.md  model-routing-audit.md  orchestration-model.md  protocol.md  provider-boundary-rules.md  provider-openai-adapter.md  retrieval-and-context.md  runtime-state-machine.md  tool-catalog.md  ts-client-contract.md  tui.md
scripts/: build-electron.mjs  check-i18n-keys.mjs  code-web.bat  code-web.sh  code.bat  code.sh  create-pdf-fixtures.mjs  electron-smoke-editor-lifecycle.mjs  electron-smoke-pdf-preview.mjs  kill-dev-ports.mjs  (+10 more)
(+2130 files in other folders)
