[package]
name = "comet-api"
version.workspace = true
edition.workspace = true

[dependencies]
comet-config = { path = "../config" }
comet-core = { path = "../core" }
protocol = { package = "comet-protocol", path = "../protocol" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
