[package]
name = "comet-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "time"] }

[dev-dependencies]
pretty_assertions = "1"
